tec-es: Alterando menu mobile

--- a/traducciones-tecnicas/index.html
+++ b/traducciones-tecnicas/index.html
@@ -266,6 +266,9 @@
                                 <a class="header--links-link-mobile" href="tel:+5511978609053">
                                     <p>(11) 9-7860-9053</p>
                                 </a>
+                                <a class="header--links-link-mobile" href="tel:+14074264090">
+                                    <p>(407) 426-4090</p>
+                                  </a>
                             </div>
                             <select class="header--language-selector">
                                 <option value="pt">PT</option>
