tec/jur-br: Ajustes CSS

--- a/traducoes-juramentadas/index.html
+++ b/traducoes-juramentadas/index.html
@@ -847,7 +847,8 @@
                     font-weight: 500;
                     font-size: 24px;
                     line-height: 22px;
-                    color: #333
+                    color: #333;
+                    white-space: nowrap;
             }
     
             .contactbox--description {
@@ -1404,7 +1405,7 @@
             
             .contactbox--wrapper-US {
             max-width: 400px;
-            margin-left: 10px;
+            margin-left: 05px;
         }
 
         .contactbox--wrapper-cta-US {
