tec/jur-br: Ajustes CSS

--- a/index.html
+++ b/index.html
@@ -1404,8 +1404,7 @@
             }
             
             .contactbox--wrapper-US {
-            max-width: 400px;
-            margin-left: 05px;
+            max-width: 407px;;
         }
 
         .contactbox--wrapper-cta-US {
