tec-br: Alterando CSS wrapper-US

--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,7 @@
             }
             
             .contactbox--wrapper-US {
-            max-width: 435px;;
+            width: 435px;
         }
 
         .contactbox--wrapper-cta-US {
